[package]
name = "bizarre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router"] }
proc-macro = { path = "proc-macro" }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.6"
wasm-logger = "0.2.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }