[package]
name = "bizarre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4", features = ["router", "web"] }
proc-macro = { path = "proc-macro" }
reqwest = { version = "0.11", features = ["json"] }
log = "0.4.6"
wasm-logger = "0.2.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
futures = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"
base64 = "0.13.0"
web-sys = "0.3.59"

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]

[build-dependencies]
markdown = "0.3.0"
serde = "1.0"
serde_json = "1.0"

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
# opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true